--- a/assets/image-with-text.css
+++ b/assets/image-with-text.css
@@ -145,3 +145,22 @@
       border-bottom-left-radius: var(--block-border-radius, 16px);
       border-top-right-radius: 0;
       border-bottom-right-radius: 0; } }
+  @media only screen and (min-width: 768px) {
+    .image-with-text.column-spacing--no-gap {
+      gap: 0; }
+    .image-with-text.column-spacing--no-gap .image-with-text--image-media {
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0; }
+    .image-with-text.column-spacing--no-gap .image-with-text--content {
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0; }
+    .image-with-text.column-spacing--no-gap.text_first .image-with-text--image-media {
+      border-top-right-radius: var(--block-border-radius, 16px);
+      border-bottom-right-radius: var(--block-border-radius, 16px);
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0; }
+    .image-with-text.column-spacing--no-gap.text_first .image-with-text--content {
+      border-top-left-radius: var(--block-border-radius, 16px);
+      border-bottom-left-radius: var(--block-border-radius, 16px);
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0; } }
